[package]
name = "cargo-lambda"
version = "0.1.0"
authors = ["Miere Teixeira <miere00@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.6"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0.19"
hyperlocal = "0.7"
hyper = "0.13"
zip = "0.5.6"
structopt = "0.3"
clap = "2.33.1"
termion = "1.5.5"
